# BrommaWoodWeddingWebsite

./: .dockerignore  .gitignore  README.md  start-dev.sh  stop-dev.sh
.devcontainer/: devcontainer.json  docker-compose.yaml  startup_script.sh
.github/workflows/: deploy-container.yaml  deploy-website.yaml
Admin/: .gitignore  README.md  encryption_key.py  import_guests.py  manage_users.py
Client/: index.html  openapi.json  openapitools.json  package-lock.json  package.json  replace-env.sh  tsconfig.json
Client/src/: App.css  App.tsx  authContext.tsx  main.tsx
Client/src/api/: apiConfiguration.ts
Client/src/components/: authProvider.tsx  countdownTimer.tsx  dividerLine.tsx  footer.tsx  guestDetailForm.tsx  header.tsx  modal.tsx
Client/src/hooks/: useCheckApiConnection.tsx  useGetGuest.tsx  useGetGuestDetails.tsx  useLoginGuest.tsx  (+1 more)
Production/: .env.example  Dockerfile.Client.prod  Dockerfile.Server.prod  compose.yml  nginx.conf
Server/: .gitignore  README.md  admin.py  compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup-windows.bat  setup.sh
Server/app/: email.py  logging.py  main.py  security.py  settings.py
Server/app/database/: db_connection.py  models.py  redis_connection.py
Server/app/middlewares/: loggingMiddleware.py
Server/app/models/: access_token.py  admin.py  generic_msg.py  guests.py
Server/app/routes/: admin.py  guests.py  root.py
Server/app/security/: Encryptor.py  hasher.py  utils.py
Server/app/templates/: confirmation_email_template.html.j2  invite_email_template.html  logistical_email.html
(+21 files in other folders)
